// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RoomAvatar should render as expected for a DM room 1`] = `
<div>
  <span
    class="_avatar_2lhia_17 mx_BaseAvatar _avatar-imageless_2lhia_56"
    data-color="1"
    data-testid="avatar-img"
    data-type="round"
    role="presentation"
    style="--cpd-avatar-size: 36px;"
    title="@dm_user@example.com"
  >
    D
  </span>
</div>
`;

exports[`RoomAvatar should render as expected for a LocalRoom 1`] = `
<div>
  <span
    class="_avatar_2lhia_17 mx_BaseAvatar _avatar-imageless_2lhia_56"
    data-color="7"
    data-testid="avatar-img"
    data-type="round"
    role="presentation"
    style="--cpd-avatar-size: 36px;"
    title="@local_room_user@example.com"
  >
    l
  </span>
</div>
`;

exports[`RoomAvatar should render as expected for a Room 1`] = `
<div>
  <span
    class="_avatar_2lhia_17 mx_BaseAvatar _avatar-imageless_2lhia_56"
    data-color="2"
    data-testid="avatar-img"
    data-type="round"
    role="presentation"
    style="--cpd-avatar-size: 36px;"
    title="!room:example.com"
  >
    t
  </span>
</div>
`;
